# optima

./: .gitignore  CMakeLists.txt  LICENSE  README.md
C-bgk/: Makefile  lb.c  lb.h  unsteady.c
C-bgk/src/: C-bgk.c  Makefile  boundaries.c  boundaries.h  lb.c  lb.h
src/.metadata/: version.ini
src/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
src/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
src/.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
src/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml
src/CPUCode/: lb.c  lb.h  unsteady.c
src/EngineCode/src/: BgkKernel.maxj  BgkManager.maxj
src/bgkDFE/: .maxdc_builds_bgkDFE  .project
src/bgkDFE/.dfeprojectproperties/: build_location  classpath
src/bgkDFE/.dfeprojectproperties/dfe/: properties
src/bgkDFE/.dfeprojectproperties/sim/: properties
src/bgkDFE/.maxeler_libraries/MaxCompiler/: versiontable
src/bgkDFE/.maxeler_libraries/MaxCompiler/2018.2.1/: classpath  location
src/bgkDFE/.maxeler_libraries/MaxCompiler/2018.3.1/: location
src/bgkDFE/.maxeler_libraries/MaxCompiler/2019.2/: classpath  location
src/bgkDFE/.maxeler_libraries/MaxCompiler/2020.2/: classpath  location
src/bgkDFE/src/bgkdfe/: bgkDFEKernel.maxj  bgkDFEManager.maxj
src/lbm-CPU/: .cproject  .cproperties  .maxproperties  .project  Makefile
src/lbm-CPU/.maxbuttons/Run/: properties
src/lbm-CPU/inc/: Maxfiles.h
src/lbm-CPU/inc/max/: bgkDFE.h
src/lbm-CPU/max/: bgkDFE.max
src/lbm-CPU/src/: lb.c  lb.h  lbm-CPU.c
(+3 files in other folders)
